app_ingresss_rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-rules
  namespace: jjva-ns-svc-pod
spec:
  ingressClassName: nginx
  rules:
  - host: mdb.eagunu4live.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mss-springboot-svc
            port:
              number: 80
  - host: mdb.eagunu4live.com
    http:
      paths:
      - pathType: Prefix
        path: "/maven-web-app"
        backend:
          service:
            name: mss-maven-svc
            port:
              number: 80
  - host: mdb.eagunu4live.com
    http:
      paths:
      - pathType: Prefix
        path: "/java-web-app"
        backend:
          service:
            name: mss-java-svc 
            port:
              number: 80
