monitor_ingresss_rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-grafana-ing
  namespace: jjva-ns-svc-pod
spec:
  ingressClassName: nginx
  rules:
    - host: prome.eagunu4live.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
            path: /
    - host: grafana.eagunu4live.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
            path: /
    - host: alert.eagunu4live.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: prometheus-alertmanager
                port:
                  number: 80
            path: /
